tests/neg/i5101.check
-- [E189] Not Found Error: tests/neg/i5101.scala:11:11 -----------------------------------------------------------------
11 |      case A0(_) =>     // error
   |           ^^
   |           no pattern match extractor named A0 was found
   |
   | longer explanation available when compiling with `-explain`
